test/resources/invalid/typecheck/InvalidUseImportNoDot.flo
import './UrlsImport' as Urls;
import './UpdateUrlsImport' as UpdateUrls;

action GET_ALL_POSTS = network(url = Urls.POSTS_URL, method = 'GET');
action DELETE_ALL_POSTS = network(url = Urls.POSTS_URL, method = 'DELETE');

action GET_ALL_USERS = network(url = Urls.USERS_URL, method = 'GET');
action UPDATE_USER = network(url = UpdateUrls.UPDATE_USER_URL, method = 'PUT');

flow POSTS = {
    string[] posts = [];
    js buggy = Urls;
    GET_ALL_POSTS >> posts;
    DELETE_ALL_POSTS >> posts;
}

flow USERS = {
    string[] users = [];
    GET_ALL_USERS >> users;
    UPDATE_USER >> users;
}
